--- a/TellMe_Mobile.Mobile/TellMe.iOS/Info.plist
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.11</string>
+	<string>1.0.12</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MinimumOSVersion</key>
@@ -40,5 +40,9 @@
 	<string>Tell Me a Story need an access to your microphone to record the stories</string>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
+	<key>kTCCServiceMediaLibrary</key>
+	<string>Tell Me a Story need an access to your media library to allow you to choose a userpic</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Tell Me a Story need an access to your photo library to allow you to choose a userpic</string>
 </dict>
 </plist>
