--- a/TellMe_Mobile.Mobile/TellMe.iOS/packages.config
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentValidation" version="7.1.1" targetFramework="xamarinios10" />
+  <package id="HockeySDK.Xamarin" version="5.0.0" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
