Comments in progress

--- a/TellMe_Mobile.Mobile/TellMe.iOS/TellMe.iOS.csproj
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/TellMe.iOS.csproj
@@ -152,6 +152,9 @@
     <ImageAsset Include="Assets.xcassets\AddGroup.imageset\group%403x.png" />
     <ImageAsset Include="Resources\Assets.xcassets\RequestStory.imageset\Contents.json" />
     <ImageAsset Include="Resources\Assets.xcassets\SendStory.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\Send.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\Send.imageset\send%402x.png" />
+    <ImageAsset Include="Assets.xcassets\Send.imageset\send%403x.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
@@ -172,6 +175,7 @@
     <Folder Include="Assets.xcassets\Account.imageset\" />
     <Folder Include="Assets.xcassets\AddGroup.imageset\" />
     <Folder Include="Views\VideoSlider\" />
+    <Folder Include="Assets.xcassets\Send.imageset\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
@@ -187,6 +191,9 @@
     <InterfaceDefinition Include="Views\Cells\TribesListCell.xib" />
     <InterfaceDefinition Include="Views\Cells\TribeMembersListCell.xib" />
     <InterfaceDefinition Include="Views\Cells\ReceiversListCell.xib" />
+    <InterfaceDefinition Include="Views\Cells\StoryViewCell.xib" />
+    <InterfaceDefinition Include="Views\Cells\CommentViewCell.xib" />
+    <InterfaceDefinition Include="Views\Cells\LoadMoreButtonCell.xib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -315,6 +322,18 @@
     <Compile Include="Views\Cells\ReceiversListCell.cs" />
     <Compile Include="Views\Cells\ReceiversListCell.designer.cs">
       <DependentUpon>ReceiversListCell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Cells\StoryViewCell.cs" />
+    <Compile Include="Views\Cells\StoryViewCell.designer.cs">
+      <DependentUpon>StoryViewCell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Cells\CommentViewCell.cs" />
+    <Compile Include="Views\Cells\CommentViewCell.designer.cs">
+      <DependentUpon>CommentViewCell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Cells\LoadMoreButtonCell.cs" />
+    <Compile Include="Views\Cells\LoadMoreButtonCell.designer.cs">
+      <DependentUpon>LoadMoreButtonCell.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
