--- a/TellMe_Server/TellMe.Web/TellMe.Web.csproj
+++ b/TellMe_Server/TellMe.Web/TellMe.Web.csproj
@@ -1,27 +1,27 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="wwwroot\"/>
+    <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0"/>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0"/>
-    <PackageReference Include="Hangfire.AspNetCore" Version="1.6.17"/>
-    <PackageReference Include="Hangfire" Version="1.6.17"/>
-    <PackageReference Include="FluentValidation.AspNetCore" Version="7.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.6.17" />
+    <PackageReference Include="Hangfire" Version="1.6.17" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="7.2.0" />
   </ItemGroup>
   <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0"/>
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0"/>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TellMe.DAL\TellMe.DAL.csproj"/>
+    <ProjectReference Include="..\TellMe.DAL\TellMe.DAL.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="*.p12" CopyToPublishDirectory="Always"/>
+    <Content Include="*.p12" CopyToPublishDirectory="Always" />
   </ItemGroup>
 </Project>
