Send Request to join email

--- a/TellMe_Server/TellMe.Web/appsettings.Production.json
+++ b/TellMe_Server/TellMe.Web/appsettings.Production.json
@@ -26,5 +26,13 @@
     "VideoContainerName": "video",
     "ImagePreviewContainerName": "preview",
     "ProfilePictureContainerName": "profilepicture"
+  },
+  "SendGrid": {
+    "ApiKey": "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",
+    "MailTemplateId": "9c85b27e-58cd-42a3-a74f-3c58fe465cc9"
+  },
+  "Settings":{
+    "SupportEmail": "alex.v.minski@gmail.com",
+    "Host": "tellmeastory.com"
   }
 }
